ES-14: Fix gap between hero section for mobile view

--- a/src/app/views/landing-page/hero-section-v1/hero-section-v1.component.scss
+++ b/src/app/views/landing-page/hero-section-v1/hero-section-v1.component.scss
@@ -198,6 +198,7 @@
 
       .hero-sub-section-1 {
         gap: 8px;
+        padding-bottom: 0;
 
         .accent-text,
         .description-text,
